# PicoMacroPad

./: CMakeLists.txt  CMakeSettings.json  ReadMe.md
Examples/: CMakeLists.txt
Examples/FirstLight/: CMakeLists.txt  FirstLight.cpp  FirstLight.h
Examples/MSC/: CMakeLists.txt  macro.json  msc.cpp  msc_disk.cpp
Examples/MSC/MacroHandler/: macrohandler.cpp  macrohandler.h
Examples/SDCard/: CMakeLists.txt  sdcard.cpp  sdcard.h
Examples/Touch/: CMakeLists.txt  touchTest.cpp
GFX-lib/: Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  Adafruit_ST77xx.cpp  CMakeLists.txt  ST7789_cmds.cpp
MacroPad/: CMakeLists.txt  MacroPad.cpp  MacroPad.h  core1Tasks.cpp  core1Tasks.h  macro.jsn  msc_disk.cpp  msc_disk.h  sdspi_config.c  tud.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
MacroPad/Debounce/: debounce.cpp  debounce.h  debounce.pio
MacroPad/GUI/: gui.cpp  gui.h  tools.c
MacroPad/ImageReader/: ImageReader.cpp  ImageReader.h
MacroPad/MIDI/: midi_Platform.h  serialMIDI.h
MacroPad/MacroHandler/: TinyUSB_Mouse_and_Keyboard.cpp  TinyUSB_Mouse_and_Keyboard.h  macrohandler.cpp  macrohandler.h
MacroPad/Touch/: Touch.cpp
TFTSDTouch/: CMakeLists.txt  TFTSDTouch.cpp  TFTSDTouch.h
TFTSDTouch/GFX-lib/: Adafruit_SPITFT.cpp  Adafruit_SPITFT.h
TFTSDTouch/ImageReader/: ImageReader.cpp  ImageReader.h
TFTSDTouch/SPI/: spilib.h
TFTSDTouch/Touch/: Touch.cpp  Touch.h
TFTSDTouch/mmc_sd/: MMC_SD.cpp  MMC_SD.h  fatfs_storage.c
TFTSDTouch/mmc_sd/fatfs/: diskio.cpp  ff.cpp  ff.h  ffconf.h
Waveshare/examples/: lcd_test.c
Waveshare/lib/config/: DEV_Config.c
Waveshare/lib/fatfs/: fatfs_storage.c
Waveshare/lib/lcd/: LCD_Driver.c
libs/: CMakeLists.txt  gpio_pins.h  hw_config.c
libs/FatFs/sd_driver/: sd_spi.c  spi.c
libs/GFX-lib/: Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt
libs/Touch/: CMakeLists.txt  Touch.cpp  Touch.h
